--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,7 @@
   --navigation-link-text-decoration: none;
   --navigation-link-hover-color: var(--primary);
   --inner-page-navigation-link-color: var(--white);
+  --upper-nav-icon-color: var(--white);
 
   /* Hero */
   --hero-overlay: rgb(9, 97, 68, 0.7);
@@ -110,6 +111,7 @@
   --footer-section-text-color: var(--white);
   --footer-section-ahref-color: var(--white);
   --footer-section-ahref-hover-color: var(--white);
+  --footer-icon-color: var(--success);
 
   /* Primary Overlay Section */
   --primary-overlay-bg-color: rgba(9, 97, 68, 0.9);
@@ -543,6 +545,9 @@ nav {
   font-size: 20px;
 }
 
+.top-information div i{
+  color: var(--upper-nav-icon-color);
+}
 
 /* Navbar */
 nav {
@@ -1581,6 +1586,11 @@ footer .footer-nav span {
 footer .footer-nav p {
   margin-bottom: 1rem;
 }
+
+footer i{
+  color: var(--footer-icon-color);
+}
+/* Completed Homepage */
 
 
 
